--- a/mqttpublishplugin/src/main/res/values/strings.xml
+++ b/mqttpublishplugin/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="message_hint">MQTT Message Settings</string>
     <string name="broker_ip_hint">Server Address</string>
     <string name="broker_port_hint">Port</string>
+    <string name="client_id_hint">Client ID</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="message_topic_hint">Topic</string>
