Added support for TLSv1. No new TLS versions yet.

--- a/mqttpublishplugin/src/main/res/values/strings.xml
+++ b/mqttpublishplugin/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="broker_ip_hint">Server Address</string>
     <string name="broker_port_hint">Port</string>
     <string name="client_id_hint">Client ID</string>
+    <string name="ssl_hint">SSL/TLS</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
     <string name="message_topic_hint">Topic</string>
